페이지 상단으로 안 가게 변경, 사문 안 뜨게 변경

--- a/Libre/libre.css
+++ b/Libre/libre.css
@@ -1062,6 +1062,7 @@ input[type="checkbox"] {
 	color: #777;
 	width:115px;
 	border-radius: 0px 0px 0px 0px;
-	margin-left: 0px;margin-right: 0px;
+	margin-left: 0px;
+	margin-right: 0px;
 }
 /* End Other */
